clap_derive/tests/ui/raw.stderr
error: `#[clap(raw(...))` attributes are removed, they are replaced with raw methods

  = help: if you meant to call `clap::Arg::raw()` method you should use bool literal, like `raw(true)` or `raw(false)`
  = note: if you need to call `clap::Arg/App::case_insensitive` method you can do it like this: #[clap(case_insensitive(true))]

  --> $DIR/raw.rs:13:12
   |
13 |     #[clap(raw(case_insensitive = "true"))]
   |            ^^^

error[E0277]: the trait bound `Opt: std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not satisfied
  --> $DIR/raw.rs:11:10
   |
11 | #[derive(Clap, Debug)]
   |          ^^^^ the trait `std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not implemented for `Opt`
